[gd_scene load_steps=4 format=3 uid="uid://6w4788wjbpy7"]

[ext_resource type="Script" path="res://menu/MainMenu.gd" id="1_gq70j"]

[sub_resource type="SystemFont" id="SystemFont_6f1sc"]

[sub_resource type="Theme" id="Theme_wlnpq"]
default_font = SubResource("SystemFont_6f1sc")
default_font_size = 50

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_gq70j")

[node name="CameraMenu" type="Camera2D" parent="."]
enabled = false

[node name="ButtonPlay" type="Button" parent="."]
offset_left = -59.0
offset_top = -189.0
offset_right = 50.0
offset_bottom = -112.0
theme = SubResource("Theme_wlnpq")
text = "Play"

[node name="ButtonQuit" type="Button" parent="."]
offset_left = -57.0
offset_top = 118.0
offset_right = 56.0
offset_bottom = 195.0
theme = SubResource("Theme_wlnpq")
text = "Quit"

[connection signal="button_down" from="ButtonPlay" to="." method="_on_button_play_button_down"]
[connection signal="button_down" from="ButtonQuit" to="." method="_on_button_quit_button_down"]
